# detr_object_detection

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
scripts/: detect_image.py  detect_webcam.py  dev.sh
src/: detector.py  utils.py  visualization.py
src/detr_vision/: camera.py  cli.py  model.py  visualization.py
templates/: index.html
tests/: test_model.py
